# tsconfig-includes

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-ISC  README.md  flake.nix  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
examples/: local.rs  simple.rs
nix/: default.nix  flake.nix
src/: error.rs  estimate.rs  exact.rs  find_up.rs  io.rs  lib.rs  path.rs  typescript_package.rs
test-data/happy-path/: lerna.json
tests/: estimate-by-package-name.rs  estimate.rs  exact.rs
