[package]
name = "tsconfig-includes"
version = "0.0.0-semantic-release-managed"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "ISC OR Apache-2.0"
description = "Enumerate files used in the TypeScript compilation"
readme = "README.md"
homepage = "https://github.com/typescript-tools/tsconfig-includes"
keywords = ["cli", "typescript", "monorepo"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
rayon = "1.6.0"
thiserror = "1.0.37"
typescript_tools = "5.0.0"

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false }
