[package]
name = "tsconfig-includes"
version = "2.0.4"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "ISC OR Apache-2.0"
description = "Enumerate files used in the TypeScript compilation"
readme = "README.md"
homepage = "https://github.com/typescript-tools/tsconfig-includes"
keywords = ["cli", "typescript", "monorepo"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json"
]

[dependencies]
anyhow = "1.0.66"
globwalk = "0.8.1"
log = "0.4.17"
rayon = "1.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.37"
typescript_tools = "5.0.0"

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false }
