[package]
name = "tsconfig-includes"
version = "2.0.4"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "ISC OR Apache-2.0"
description = "Enumerate files used in the TypeScript compilation"
readme = "README.md"
homepage = "https://github.com/typescript-tools/tsconfig-includes"
keywords = ["cli", "typescript", "monorepo"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/.gitignore",
  "/.releaserc.json",
  "/CHANGELOG.md",
  "/flake.{lock,nix}",
  "/package*.json"
]

[dependencies]
globwalk = "0.8.1"
log = "0.4.17"
rayon = "1.6.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
typescript_tools = "9.0.0"

[dev-dependencies]
clap = { version = "4.4.4", features = ["derive"] }
